# ucdev-demos

./: .clang-format  .gitignore
32f_testing/: .cproject  Makefile  bmp280.c  dis2.c  i2c.h  identify.c  main.c  stm32f103xb.ld
32f_testing/results/: results.txt
at_demo/: Makefile  main.c
dhrystone/: .cproject  Makefile  dhrystone.c  main.c  stm32f072xb.ld  stm32l052xx.ld
ds28b20/: Makefile  main.c
dsmr/: Makefile  ucglib_demo.c  ucglib_ssd1331_fps_32f.txt
dtu_demo/: Makefile  main.c
gnss_simple/: Makefile  main.c
i2c/: .cproject  Makefile  hcd1080.c  i2c.c  i2c.h  identify.c  lm75b.h  main.c  pcf8563.c  pcf8563.h  pcf8574.h  scd4x.c  sht2x.c  sht2x.h
ina22x/: Makefile  i2c.c  i2c.h  main.c
instruction_latency/: .cproject  .project  Makefile  identify.c  main.c  peripheral_addresses  results  stm32f103x6.ld  stm32f103xb.ld  t_aux.s  test2.c
instruction_latency/results/: apm32_apexmic.txt  (+10 more)
radio/: 12500_10.h  Makefile  dis2.c  magic.c  radio.h  radio_demo.c  rfm69.c  rfm69.h  rfm69_test.c  si4x3x.c  si4x3x.h  si4x6x.c  si4x6x.h  sxv1.c  sxv1.h  ucglib_demo.c
rfid/esp32.esp-idf/components/ucdev/: CMakeLists.txt  bsrfid  libhalglue
spi_flash/: Makefile  i2c.c  spi_flash.c  spi_flash.h
wireless_ac_switch/: Makefile  default_handler.c  display.c  display.h  ir.c  ir.h  ir_stm32.c  light_switch.c  light_switch.h  rtc.c  rtc.h  sensors.c  sensors.h  stm32f103xb.ld  test.c  wireless_ac_switch.c
wireless_dongle/: Makefile  sensors.c  usb.c  wireless_dongle.c
wireless_sensor/: Makefile  sensors.c  sensors.h  timer.h  timer_stm32.c  wireless_sensor.c
(+66 files in other folders)
